--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
       <header style="text-align: center;">My Portfolio </header>
     <div style="display: flex;" class="mydiv">
-      <div><img src="Images/IMG_20240102_003333.png" alt="A professional picture of Eugene Morcher" height="80" style="border-radius: 40px;margin-left: 250px;"  > </div>
+      <div><img src="\Images/IMG_20240102_003333.png" alt="A professional picture of Eugene Morcher" height="80" style="border-radius: 40px;margin-left: 250px;"  > </div>
     <div style="margin-left: 30px;"><p style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Hi i'm Eugene morcher, a computer Science student who is<br> passionate about web development and machine learning.<br>Also when it comes to Mathematics that is mine first love.</p></div>
     </div>
     <h2 style="text-align: center;">EDUCATION</h2>
